--- a/css/styles.css
+++ b/css/styles.css
@@ -1,82 +1,97 @@
 @font-face {
-    font-family: shabnam;
-    src: url(/fonts/Shabnam.woff)format('woff');
+  font-family: shabnam;
+  src: url(/fonts/Shabnam.woff) format("woff");
 }
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    height: 100vh;
-    font-family: shabnam;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #E0E0E0;
-}
-
-.input{
-    font-family: shabnam;
-}
-
-.input[type='tel']::placeholder{
-    direction: rtl;
-}
-
-.container{
-    display: flex;
-    flex-direction: column;
-    background: #fafafa;
-    padding: 50px;
-}
-
-.input{
-    padding: 8px;
-    width: 100%;
-    font-size: 12px;
-}
-
-input.input-name {
-    padding: 8px;
-    font-size: 12px;
-}
-
-.text-head {
-    font-size: 12px;
-    padding: 16px 0;
-    display: flex;
-    justify-content: center;
-}
-
-form.form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-textarea.input {
-    height: 5rem;
-}
-
-.gender{
-    display: flex;
-    gap: 30px;
-}
-
-.fullname {
-    display: flex;
-    gap: 16px;
+body {
+  height: 100vh;
+  font-family: shabnam;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e0e0e0;
 }
 
 .input {
-    border-radius: 4px;
-    border: 1px solid #CCC;
+  font-family: shabnam;
 }
 
-input[type=date]::-webkit-datetime-edit-text {
+.input[type="tel"]::placeholder {
+  direction: rtl;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  background: #fafafa;
+  padding: 30px 50px;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+}
+
+.input {
+  padding: 8px;
+  width: 100%;
+  font-size: 12px;
+}
+
+input.input-name {
+  padding: 8px;
+  font-size: 12px;
+}
+
+.title-head {
+  font-size: 12px;
+  padding: 16px 0;
+  display: flex;
+  justify-content: center;
+}
+
+form.form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+textarea.input {
+  height: 5rem;
+}
+
+.shaba {
+  position: relative;
+}
+
+.shaba-icon {
+  position: absolute;
+  left: 6px;
+  top: 10px;
+}
+
+.gender {
+  display: flex;
+  gap: 30px;
+}
+
+.fullname {
+  display: flex;
+  gap: 16px;
+}
+
+.input {
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+/* input[type=date]::-webkit-datetime-edit-text {
     -webkit-appearance: none;
     display: none;
 }
@@ -94,8 +109,78 @@ input[type=date]::-webkit-datetime-edit-day-field {
 input[type=date]::-webkit-datetime-edit-year-field {
     -webkit-appearance: none;
     display: none;
-}
+} */
 
 input[type="tel"]::-webkit-input-placeholder {
-    text-align: right;
+  text-align: right;
+}
+
+.profile {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.profile-button {
+  display: flex;
+  border: #26c6da;
+  gap: 1rem;
+  margin-top: 0.5rem;
+  align-items: center;
+}
+
+button.button {
+  border: 0;
+  border-radius: 4px;
+  background: none;
+  font-family: shabnam;
+  display: flex;
+  padding: 4px 4px 0 4px;
+  gap: 0.3rem;
+  color: #fff;
+  cursor: pointer;
+
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.button-add-img {
+  position: relative;
+  display: block;
+  /* cursor: pointer; */
+}
+
+.lable-add-img {
+  /* cursor: pointer; */
+}
+
+.input-file {
+  max-width: 100%;
+  padding: 7px;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+.button:active {
+  background-color: #00acc1;
+}
+
+.add-change {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
+.button-addChange {
+  border: 0;
+  border-radius: 4px;
+  font-family: shabnam;
+  display: flex;
+  padding: 6px 10px;
+  gap: 0.3rem;
+  color: #fff;
+  cursor: pointer;
+  background: rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
