--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ body {
   direction: rtl;
 }
 
-.container {
+.main-container {
   display: flex;
   flex-direction: column;
   background: #fafafa;
@@ -103,7 +103,7 @@ input[type="tel"]::-webkit-input-placeholder {
   margin-bottom: 1rem;
 }
 
-.profile-button {
+.profile-label {
   display: flex;
   border: #26c6da;
   gap: 1rem;
@@ -121,7 +121,7 @@ input[type="tel"]::-webkit-input-placeholder {
   background: rgba(0, 0, 0, 0.3);
 }
 
-.button-addChange {
+.button-add-change {
   color: #fff;
   border: 0;
   border-radius: 4px;
@@ -129,6 +129,17 @@ input[type="tel"]::-webkit-input-placeholder {
   cursor: pointer;
   font-family: shabnam;
   background: rgba(0, 0, 0, 0.3);
+}
+
+.input-img {
+  display: none;
+}
+
+.input-img:checked ~ img {
+  position: relative;
+  /* z-index: 100; */
+  width: 300px;
+  height: 300px;
 }
 
 .input-add-img {
