--- a/css/styles.css
+++ b/css/styles.css
@@ -173,23 +173,20 @@ input[type="number"] {
 }
 
 .img-zoom-in {
+  background: rgba(238, 238, 238, 1);
   position: absolute;
   display: flex;
   justify-content: center;
-  left: -5rem;
+  left: -6rem;
   top: -9rem;
   display: none;
-}
-
-.input-checkbox-img:checked ~ .img-zoom-in {
-  display: flex;
+  padding: 20px;
 }
 
 .label-checkbox-input {
-  cursor: pointer;
   position: absolute;
-  bottom: 0;
-  left: 10px;
+  bottom: -2px;
+  left: 6px;
 }
 
 .img-profile {
@@ -197,6 +194,7 @@ input[type="number"] {
 }
 
 .icon-fullscreen {
+  cursor: pointer;
   color: #eee;
   padding: 2px;
   background: rgba(0, 0, 0, 0.3);
@@ -205,4 +203,98 @@ input[type="number"] {
   -moz-border-radius: 100%;
   -ms-border-radius: 100%;
   -o-border-radius: 100%;
+}
+
+.close-image {
+  z-index: 1;
+  position: absolute;
+  cursor: pointer;
+  display: none;
+  left: -90px;
+  top: -138px;
+}
+
+.input-checkbox-img:checked ~ .img-zoom-in {
+  display: flex;
+}
+
+.input-checkbox-img:checked ~ .close-image {
+  display: flex;
+}
+
+.input-darkmode {
+  display: none;
+}
+
+.label-darkmode {
+  position: absolute;
+  top: 6px;
+  left: 10px;
+  width: 48px;
+  height: 27px;
+  border: 4px solid #bbb;
+  border-radius: 24px;
+  transition: all 0.4s;
+  background-color: #fff;
+  z-index: 1;
+  /* transition: 0.5s; */
+}
+
+.input-darkmode:checked ~ .label-darkmode {
+  background-color: #757575;
+}
+
+.input-darkmode:checked ~ .main-container {
+  background-color: #757575;
+}
+
+.input-darkmode:checked ~ .main-container {
+  color: #fff;
+  background-color: #757575;
+}
+
+.input-darkmode:checked ~ .main-container input {
+  background-color: rgba(214, 214, 214, 0.9);
+}
+
+.input-darkmode:checked ~ .main-container textarea {
+  background-color: rgba(214, 214, 214, 0.9);
+}
+
+.input-darkmode:checked ~ .main-container .img-zoom-in {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.input-darkmode:checked ~ .main-container .close-image {
+  color: #fff;
+}
+
+input,
+textarea {
+  outline: none;
+}
+
+.input-darkmode {
+  position: relative;
+}
+
+.label-darkmode::before {
+  content: "";
+  position: absolute;
+  width: 18px;
+  height: 17px;
+  border-radius: 20px;
+  top: 0.5px;
+  left: 0.5px;
+  background: #757575;
+  /* transition: all 0.9s ease-in; */
+}
+
+.input-darkmode:checked ~ .label-darkmode::before {
+  right: 1px;
+  background: #fff;
+}
+
+.all-profile {
+  position: relative;
 }
